--- a/src/index.html
+++ b/src/index.html
@@ -9,12 +9,36 @@
     <link rel="icon" href="./images/favicon.png" />
   </head>
  <body>
+  <!--
      <header class="miheader">
        <h1>ANONYMOUS PROXY</h1>
       <P class="inhac">In hac habitasse platea dictumst.</P>
       <img class="flechadown" src="../public/images/ico-scroll-down.svg" alt="flecha hacia abajo">
     </header>
-  <link rel="stylesheet" href="scss/main.scss">
+  -->
+
+  <main>
+    <div>
+      <article class="artone">
+        <p class="insom">Insomnia Tips</p>
+        <h2>Looking Through A Window</h2>
+        <p class="donec">Donec accumsan, nulla ut volutpat
+          porttitor, quam odio tempus felis, at
+          luctus ex diam nec lectus. Vivamus
+          semper sodales rutrum.
+        </p>
+      </article>
+      <button>GO</button>
+    </div>
+    <div class="divdos">
+      <h2 class="reas">3 Reasons To Purchase</h2>
+      <span class="ut">Ut sed metus</span>
+      <p class="lorem">Lorem ipsum dolor sit
+        amet,consecteur.</p>
+        <span class="cur">Curabitur ac erat</span>
+    </div>
+   
+  </main>
 
 
 
