--- a/src/index.html
+++ b/src/index.html
@@ -36,6 +36,14 @@
       <p class="lorem">Lorem ipsum dolor sit
         amet,consecteur.</p>
         <span class="cur">Curabitur ac erat</span>
+        <p class="mauri">
+          Mauris mattis urna
+          quis lorem molestie.
+        </p>
+        <span class="morbi">Morbi dictum</span>
+        <p class="ali"> Aliquam in dolor et
+          dolor tincidunt.</p>
+          <button class="more">More reasons</button>
     </div>
    
   </main>
