--- a/src/index.html
+++ b/src/index.html
@@ -45,6 +45,31 @@
           dolor tincidunt.</p>
           <button class="more">More reasons</button>
     </div>
+
+    <footer>
+      <div class="foo">
+        
+         <article class="arboeve">
+          <p class="ar">ARTICLES</p>
+          <p class="boo"> BOOKS </p>
+          <p class="eve">EVENTS</p>
+          <p class="rea">REASONS</p>
+          <p class="tip">TIPS</p>
+         </article>
+
+         <article class="rrss">
+          <p class="twi">TWITTER</p>
+          <p class="insta">INSTAGRAM</p>
+          <p class="masto">MASTODON.SOCIAL</p>
+         </article>
+
+         <article>
+          <p class="c">© 2022</p>
+          <p class="cor">we &#129505; components</p>
+         </article>
+        
+      </div>
+    </footer>
    
   </main>
 
