--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -9,13 +9,13 @@
     <link rel="icon" href="./images/favicon.png" />
   </head>
  <body>
-  <!--
-     <header class="miheader">
+  
+     <!-- <header class="miheader">
        <h1>ANONYMOUS PROXY</h1>
       <P class="inhac">In hac habitasse platea dictumst.</P>
       <img class="flechadown" src="../public/images/ico-scroll-down.svg" alt="flecha hacia abajo">
     </header>
-  -->
+   -->
 
   <main>
     <div>
@@ -28,19 +28,20 @@
           semper sodales rutrum.
         </p>
       </article>
-      <button>GO</button>
+      <button>Go</button>
     </div>
+
     <div class="divdos">
       <h2 class="reas">3 Reasons To Purchase</h2>
       <span class="ut">Ut sed metus</span>
       <p class="lorem">Lorem ipsum dolor sit
         amet,consecteur.</p>
-        <span class="cur">Curabitur ac erat</span>
+        <h3 class="cur">Curabitur ac erat</h3>
         <p class="mauri">
           Mauris mattis urna
           quis lorem molestie.
         </p>
-        <span class="morbi">Morbi dictum</span>
+        <h3 class="morbi">Morbi dictum</h3>
         <p class="ali"> Aliquam in dolor et
           dolor tincidunt.</p>
           <button class="more">More reasons</button>
@@ -72,12 +73,6 @@
     </footer>
    
   </main>
-
-
-
-
-
-
 
  </body>
  
