--- a/src/index.html
+++ b/src/index.html
@@ -10,15 +10,19 @@
   </head>
  <body>
   
-     <!-- <header class="miheader">
-       <h1>ANONYMOUS PROXY</h1>
+     <header class="miheader">
+      <div class="cuadrado"><img src="../public/images/ico-menu.svg" alt=""></div>
+     
+  
+       <h1>ANONYMOUS
+         PROXY</h1>
       <P class="inhac">In hac habitasse platea dictumst.</P>
-      <img class="flechadown" src="../public/images/ico-scroll-down.svg" alt="flecha hacia abajo">
+      <img class="flechadown" src="../public/ico-scroll-down.svg" alt="flecha hacia abajo">
     </header>
-   -->
+  
 
   <main>
-    <div>
+    <div class="rectanblanc">
       <article class="artone">
         <p class="insom">Insomnia Tips</p>
         <h2>Looking Through A Window</h2>
@@ -28,22 +32,33 @@
           semper sodales rutrum.
         </p>
       </article>
-      <button>Go</button>
+      
+      <a href="https://landing.adalab.es/bootcamps-adalab?utm_term=adalab%20digital&utm_campaign=ESP_GOOGLE_SEARCH_BRAND_CONV&utm_source=google&utm_medium=ppc&hsa_acc=5177828897&hsa_cam=20252484154&hsa_grp=149341856065&hsa_ad=723905173380&hsa_src=g&hsa_tgt=kwd-866283826263&hsa_kw=adalab%20digital&hsa_mt=e&hsa_net=adwords&hsa_ver=3&gad_source=1&gbraid=0AAAAABHtxIFU_wpM1UQEVpCdSatqraQ2D&gclid=Cj0KCQjwh_i_BhCzARIsANimeoHKRN7Dd30uLYVDNTvMjh4btKmp1OjoN_hYZsAbpYb-MhwC8ekr5OMaApKPEALw_wcB" class="butgo">Go</a>
     </div>
 
     <div class="divdos">
       <h2 class="reas">3 Reasons To Purchase</h2>
-      <span class="ut">Ut sed metus</span>
-      <p class="lorem">Lorem ipsum dolor sit
-        amet,consecteur.</p>
+      <article>
+        <h3 class="ut">Ut sed metus</h3>
+        <p class="lorem">
+          Lorem ipsum dolor sit
+          amet,consecteur. Lorem
+        </p>
+      </article>
+      <article>
         <h3 class="cur">Curabitur ac erat</h3>
         <p class="mauri">
           Mauris mattis urna
           quis lorem molestie.
         </p>
+      </article>
+      <article>
         <h3 class="morbi">Morbi dictum</h3>
-        <p class="ali"> Aliquam in dolor et
-          dolor tincidunt.</p>
+        <p class="ali">
+          Aliquam in dolor et
+          dolor tincidunt.
+        </p>
+      </article>
           <button class="more">More reasons</button>
     </div>
 
@@ -59,9 +74,11 @@
          </article>
 
          <article class="rrss">
-          <p class="twi">TWITTER</p>
-          <p class="insta">INSTAGRAM</p>
-          <p class="masto">MASTODON.SOCIAL</p>
+          <div> <a href="https://x.com/Adalab_Digital/status/1788630415906881979">TWITTER</a><p class="twi"></p>
+
+          <p class="insta"><a href="https://www.instagram.com/adalab_digital/?hl=es">INSTAGRAM</a></p>
+
+          <p class="masto"><a href="https://mastodon.social/tags/Adalab">MASTODON.SOCIAL</a></p></div>
          </article>
 
          <article>
