--- a/src/index.html
+++ b/src/index.html
@@ -4,20 +4,24 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Anonymous proxy</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="./scss/main.scss" />
     <link rel="icon" href="./images/favicon.png" />
   </head>
  <body>
   
      <header class="miheader">
-      <div class="cuadrado"><img src="../public/images/ico-menu.svg" alt=""></div>
+      <div class="cuadrado"><img class="menu" src="./images/ico-menu.svg" alt=""></div>
      
   
        <h1>ANONYMOUS
          PROXY</h1>
       <P class="inhac">In hac habitasse platea dictumst.</P>
-      <img class="flechadown" src="../public/ico-scroll-down.svg" alt="flecha hacia abajo">
+      <img class="flechadown" src="./images/ico-scroll-down.svg" alt="flecha hacia abajo">
     </header>
   
 
@@ -74,11 +78,12 @@
          </article>
 
          <article class="rrss">
-          <div> <a href="https://x.com/Adalab_Digital/status/1788630415906881979">TWITTER</a><p class="twi"></p>
+           <p ><a class="link" href="https://x.com/Adalab_Digital/status/1788630415906881979">TWITTER</a></p>
 
-          <p class="insta"><a href="https://www.instagram.com/adalab_digital/?hl=es">INSTAGRAM</a></p>
+          <p ><a class="link" href="https://www.instagram.com/adalab_digital/?hl=es">INSTAGRAM</a></p>
 
-          <p class="masto"><a href="https://mastodon.social/tags/Adalab">MASTODON.SOCIAL</a></p></div>
+          <p ><a class="link
+            "  href="https://mastodon.social/tags/Adalab">MASTODON.SOCIAL</a></p>
          </article>
 
          <article>
