--- a/src/index.html
+++ b/src/index.html
@@ -93,7 +93,8 @@
           </div>
 
         </div>
-       <div>
+
+       <div class="whitewc" >
          <div class="containerwhite">
 
           <div class="containerp">
@@ -102,18 +103,10 @@
           </div>
           <div class="boton2">Comprar Ahora</div>
         </div>
-        <div>
+        <div class="containerwc" >
           <img class="wc" src="./images/creando-espacios.jpg" alt="Imagen baño">
-        </div> 
-
-         <!-- <div class="containerwhite">
-  <div class="containerp">
-    <p class="p1">Disfruta creando espacios</p>
-    <p class="p2">Una línea de productos diseñados para todos tus espacios</p>
-  </div>
-  <img class="wc" src="./images/creando-espacios.jpg" alt="Imagen baño">
-</div> -->
-
+        </div>
+        
      </main>
     <footer>
          <section class="footer" >
